--- a/Psych/psych.css
+++ b/Psych/psych.css
@@ -3,6 +3,20 @@ html, body{
     margin: 0px;
 }
 
+.module {
+  cursor: url('path-to-image.png'), auto;	
+}
+
+button {
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+
 .images{
     position: absolute;
     width: 50%;
